:wrench: previewページ追加と編集ページ修正追加

--- a/list.html
+++ b/list.html
@@ -68,6 +68,7 @@
                 <ul>
                     <li><a href="password/confirm.html">Password Confirm page</a></li>
                     <li><a href="password/email.html">Password Email page</a></li>
+                    <li><a href="password/reset.html">Password Reset page</a></li>
                 </ul>
             </div>
         </div>
