--- a/mypage/edit/info.html
+++ b/mypage/edit/info.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>A++ my info</title>
+    <title>A++ My Info Edit</title>
     <link rel="stylesheet" href="../../css/style.css" />
     <!-- Favicon -->
     <link rel="icon" href="../../favicon.ico">
