:wrench: passwordリセットページ修正

--- a/mypage/edit/skill.html
+++ b/mypage/edit/skill.html
@@ -28,7 +28,7 @@
     <div class="user-skill-body">
 
         <div class="user-skill-whitebox">
-            <form class="user-skill-contents" action="" method="post" enctype="multipart/form-data">
+            <div class="user-skill-contents" action="" method="post" enctype="multipart/form-data">
                 <div class="job-categories1">
                     <div class="job-categories1-title">
                         職業類別
@@ -229,7 +229,7 @@
                 <div class="info-submit">
                     <button type="submit" name="" class="button-bottom">更新</button>
                 </div>
-            </form>
+            </div>
         </div>
     </div>
 
