--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex">
     <title>A++</title>
     <link rel="stylesheet" href="./css/lib/swiper.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -27,7 +28,7 @@
                             <a href="" class="h-top-nav__link">全 職</a>
                         </li>
                         <li class="h-top-nav__item">
-                            <a href="" class="h-top-nav__link">兼 職</a>
+                            <a href="list.html" class="h-top-nav__link">兼 職</a>
                         </li>
                         <li class="h-top-nav__item">
                             <a href="" class="h-top-nav__link">自由工作者</a>
