--- a/mypage/preview/skill.html
+++ b/mypage/preview/skill.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>A++ My Skill preview</title>
+    <meta name="robots" content="noindex">
+    <title>A++ My Skill Preview</title>
     <link rel="stylesheet" href="../../css/style.css" />
     <!-- Favicon -->
     <link rel="icon" href="../../favicon.ico">
