--- a/reg/step3.html
+++ b/reg/step3.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex">
     <title>A++ 註冊會員 STEP3 填寫自我評量</title>
     <link rel="stylesheet" href="../css/style.css" />
     <!-- Favicon -->
