:wrench: Resumeのpreviewページ修正

--- a/mypage/preview/resume.html
+++ b/mypage/preview/resume.html
@@ -31,69 +31,98 @@
         <div class="preview-side-menu">
             <div class="preview-side-menu__area">
                 <div class="preview-side-menu__link">
-                    <p><a href="">一般</a></p>
+                    <a href="info.html">一般</a>
                 </div>
                 <div class="preview-side-menu__link">
                     <p class="preview-side-menu__current-link">個人履歷</p>
                 </div>
                 <div class="preview-side-menu__link">
-                    <p><a href="">自我評量</a></p>
+                    <a href="skill.html">自我評量</a>
                 </div>
             </div>
         </div>
         <!-- white-box Account-information -->
         <div class="account-info-preview">
-            <div class="form-account-info" action="" method="post" enctype="multipart/form-data">
-                <table class="account-info-input">
-                    <tr>
-                        <td><label>ID帳號</label></td>
-                        <td>
-                            <p></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label>密碼</label></td>
-                        <td>
-                            <p></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label>再次輸入密碼</label></td>
-                        <td>
-                            <p></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label>姓氏</label></td>
-                        <td>
-                            <p></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label>名字</label></td>
-                        <td>
-                            <p></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label>出生日期</label></td>
-                        <td>
-                            <p></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label>電子郵件信箱</label></td>
-                        <td>
-                            <p></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label>手機號碼</label></td>
-                        <td>
-                            <p></p>
-                        </td>
-                    </tr>
-                </table>
+            <div class="form-account-info">
+                <div class="account-resume-preview">
+                    <div class="resume-section">
+                        <div class="resume-section__title">
+                            陳小喬
+                        </div>
+                        <div class="resume-section__contents personal-info-contents">
+                            <div class="resume-section__image">
+                                <img src="/" alt="">
+                            </div>
+                            <div class="resume-section__bottom">
+                                <p>地址:台北市大安區敦化南路一段100號</p>
+                                <p>聯絡電話:0910-000-000</p>
+                                
+                            </div>
+                        </div>
+                    </div>
+                    <div class="resume-section">
+                        <div class="resume-section__title">
+                            自傳 Profile
+                        </div>
+                        <div class="resume-section__contents">
+                            <p class="resume-section__text">請撰寫100~200字的個人自傳</p>
+                        </div>
+                    </div>
+                    <div class="resume-section">
+                        <div class="resume-section__title">
+                            工作經歷 Experience 
+                        </div>
+                        <div class="resume-section__contents">
+                            <div class="resume-section__contents__area">
+                                <ul>
+                                    <li>開始年月<p>2022/1</p></li>
+                                    <li>~</li>
+                                    <li>結束年月<p>現在</p></li>
+                                    <li>共計年月<p>0年3個月</p></li>
+                                    <li>職稱<p>請填寫職稱 EX:建築設計師</p></li>
+                                    <li>就職公司<p>請填寫公司名稱 EX:某建築師事務所</p></li>
+                                </ul>
+                                <div class="experience-note">
+                                    簡述, 工作重點, 負責專案, 備註
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="resume-section">
+                        <div class="resume-section__title">
+                            學歷 Education 
+                        </div>
+                        <div class="resume-section__contents">
+                            <div class="resume-section__contents__area">
+                                <ul>
+                                    <li>開始年月<p>2022/1</p></li>
+                                    <li>~</li>
+                                    <li>結束年月<p>現在</p></li>
+                                    <li>畢業/肄業<p>畢業</p></li>
+                                    <li>學校<p>台湾大学</p></li>
+                                    <li>科系<p>土木工程系</p></li>
+                                    <li>學位<p>博⼠候選⼈</p></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="resume-section">
+                        <div class="resume-section__title">
+                            專業證照｜獲獎紀錄｜相關社團參與 
+                        </div>
+                        <div class="resume-section__contents">
+                            <p class="resume-section__text">台灣台北註冊建築師</p>
+                        </div>
+                    </div>
+                    <div class="resume-section">
+                        <div class="resume-section__title">
+                            興趣 Habits
+                        </div>
+                        <div class="resume-section__contents">
+                            <p class="resume-section__text">素描, 建築素描, 測繪, 旅行</p>
+                        </div>
+                    </div>
+                </div>
                 <div class="submit-button">
                     <a href src="">修改</a>
                 </div>
