:wrench: マイページのサイドメニュー微調整

--- a/mypage/preview/info.html
+++ b/mypage/preview/info.html
@@ -35,10 +35,10 @@
                     <p class="preview-side-menu__current-link">一般</p>
                 </div>
                 <div class="preview-side-menu__link">
-                    <p><a href="">個人履歷</a></p>
+                    <a href="resume.html">個人履歷</a>
                 </div>
                 <div class="preview-side-menu__link">
-                    <p><a href="">自我評量</a></p>
+                    <a href="skill.html">自我評量</a>
                 </div>
             </div>
         </div>
