--- a/mypage/preview/skill.html
+++ b/mypage/preview/skill.html
@@ -31,10 +31,10 @@
         <div class="preview-side-menu">
             <div class="preview-side-menu__area">
                 <div class="preview-side-menu__link">
-                    <p><a href="">一般</a></p>
+                    <a href="info.html">一般</a>
                 </div>
                 <div class="preview-side-menu__link">
-                    <p><a href="">個人履歷</a></p>                  
+                    <a href="resume.html">個人履歷</a>                
                 </div>
                 <div class="preview-side-menu__link">
                     <p class="preview-side-menu__current-link">自我評量</p>
