:wrench: my page(skill)のpreview修正

--- a/mypage/preview/skill.html
+++ b/mypage/preview/skill.html
@@ -43,57 +43,155 @@
         </div>
         <!-- white-box Account-information -->
         <div class="account-info-preview">
-            <div class="form-account-info" action="" method="post" enctype="multipart/form-data">
-                <table class="account-info-input">
-                    <tr>
-                        <td><label>ID帳號</label></td>
-                        <td>
-                            <p></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label>密碼</label></td>
-                        <td>
-                            <p></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label>再次輸入密碼</label></td>
-                        <td>
-                            <p></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label>姓氏</label></td>
-                        <td>
-                            <p></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label>名字</label></td>
-                        <td>
-                            <p></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label>出生日期</label></td>
-                        <td>
-                            <p></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label>電子郵件信箱</label></td>
-                        <td>
-                            <p></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label>手機號碼</label></td>
-                        <td>
-                            <p></p>
-                        </td>
-                    </tr>
-                </table>
+            <div class="form-account-info">
+                <div class="account-skill-preview">
+                    <div class="skill-section">
+                        <div class="skill-section__title">
+                            職業類別
+                        </div>
+                        <div class="skill-section__contents">
+                            建築
+                        </div>
+                    </div>
+                    <div class="work-skill sp-tgl-wrap">
+                        <h3 class="works__section-title tgl-switch">
+                            <div class="works__section-icon">
+                                <img src="../../img/home/work_section_title_icon1.svg" alt="" />
+                            </div>
+                            主要技能需求
+                        </h3>
+                        <div class="work-skill__wrap tgl-content">
+                            <div class="work-skill__list">
+                                <!-- For -->
+                                <!-- Item -->
+                                <div class="work-skill__item">
+                                    <div class="work-skill__title">Autocad<br />軟體使用</div>
+                                    <div class="work-skill__evaluation">
+                                        <ol class="c-evaluation">
+                                            <li class="c-evaluation__item">
+                                                <p class="c-evaluation__rank">C</p>
+                                            </li>
+                                            <li class="c-evaluation__item">
+                                                <p class="c-evaluation__rank">B</p>
+                                            </li>
+                                            <li class="c-evaluation__item">
+                                                <p class="c-evaluation__rank">B+</p>
+                                            </li>
+                                            <li class="c-evaluation__item -active">
+                                                <p class="c-evaluation__rank">A</p>
+                                            </li>
+                                            <li class="c-evaluation__item">
+                                                <p class="c-evaluation__rank">A+</p>
+                                            </li>
+                                            <li class="c-evaluation__item">
+                                                <p class="c-evaluation__rank">A++</p>
+                                            </li>
+                                        </ol>
+                                    </div>
+                                </div>
+                                <!-- // Item -->
+                                <div class="work-skill__item">
+                                    <div class="work-skill__title">施工圖繪製</div>
+                                    <div class="work-skill__evaluation">
+                                        <ol class="c-evaluation">
+                                            <li class="c-evaluation__item">
+                                                <p class="c-evaluation__rank">C</p>
+                                            </li>
+                                            <li class="c-evaluation__item">
+                                                <p class="c-evaluation__rank">B</p>
+                                            </li>
+                                            <li class="c-evaluation__item">
+                                                <p class="c-evaluation__rank">B+</p>
+                                            </li>
+                                            <li class="c-evaluation__item -active">
+                                                <p class="c-evaluation__rank">A</p>
+                                            </li>
+                                            <li class="c-evaluation__item">
+                                                <p class="c-evaluation__rank">A+</p>
+                                            </li>
+                                            <li class="c-evaluation__item">
+                                                <p class="c-evaluation__rank">A++</p>
+                                            </li>
+                                        </ol>
+                                    </div>
+                                </div>
+                                <div class="work-skill__item">
+                                    <div class="work-skill__title">專案管理<br />經驗</div>
+                                    <div class="work-skill__evaluation">
+                                        <ol class="c-evaluation">
+                                            <li class="c-evaluation__item">
+                                                <p class="c-evaluation__rank">C</p>
+                                            </li>
+                                            <li class="c-evaluation__item">
+                                                <p class="c-evaluation__rank">B</p>
+                                            </li>
+                                            <li class="c-evaluation__item">
+                                                <p class="c-evaluation__rank">B+</p>
+                                            </li>
+                                            <li class="c-evaluation__item -active">
+                                                <p class="c-evaluation__rank">A</p>
+                                            </li>
+                                            <li class="c-evaluation__item">
+                                                <p class="c-evaluation__rank">A+</p>
+                                            </li>
+                                            <li class="c-evaluation__item">
+                                                <p class="c-evaluation__rank">A++</p>
+                                            </li>
+                                        </ol>
+                                    </div>
+                                </div>
+                                <!-- End For -->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rank-base" id="rank-base">
+                        <div class="rank-base-title">
+                            <img src="../../img/sales_analysis_icon.png" alt="">評分標準
+                        </div>
+                        <table class="rankBase">
+                            <tr>
+                                <td class="rankBase__top_left"></td>
+                                <td class="rankBase__top">百分制</td>
+                                <td class="rankBase__top_right">換句話説</td>
+                            </tr>
+                            <tr>
+                                <td class="rankBase__left_A">A++</td>
+                                <td class="rankBase__middle">95分以上</td>
+                                <td class="rankBase__right">匠師等級，接受膜拜～</td>
+                            </tr>
+                            <tr>
+                                <td class="rankBase__left">A+</td>
+                                <td class="rankBase__middle">90~95分</td>
+                                <td class="rankBase__right">業界老鳥，快教教菜鳥吧！</td>
+                            </tr>
+                            <tr>
+                                <td class="rankBase__left">A</td>
+                                <td class="rankBase__middle">80~90分</td>
+                                <td class="rankBase__right">經驗豐富，疑難雜症都可以！</td>
+                            </tr>
+                            <tr>
+                                <td class="rankBase__left">B+</td>
+                                <td class="rankBase__middle">75~80分</td>
+                                <td class="rankBase__right">剛好而已, 不是謙虛喔～</td>
+                            </tr>
+                            <tr>
+                                <td class="rankBase__left">B</td>
+                                <td class="rankBase__middle">70~75分</td>
+                                <td class="rankBase__right">勉勉強強，持續努力中！</td>
+                            </tr>
+                            <tr>
+                                <td class="rankBase__left">C</td>
+                                <td class="rankBase__middle">60~70分</td>
+                                <td class="rankBase__right">業界菜鳥，才剛從學校畢業～</td>
+                            </tr>
+                            <tr>
+                                <td class="rankBase__bottom_left">D</td>
+                                <td class="rankBase__bottom">60分以下</td>
+                                <td class="rankBase__bottom_right">拜託～根本不會！</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
                 <div class="submit-button">
                     <a href src="">修改</a>
                 </div>
