--- a/mypage/preview/resume.html
+++ b/mypage/preview/resume.html
@@ -124,7 +124,7 @@
                     </div>
                 </div>
                 <div class="submit-button">
-                    <a href src="">修改</a>
+                    <a href src="../edit/resume.html">修改</a>
                 </div>
             </div>
         </div>
