:wrench: mypage(info)のpreview修正

--- a/mypage/preview/info.html
+++ b/mypage/preview/info.html
@@ -45,54 +45,52 @@
         
         <!-- white-box Account-information -->
         <div class="account-info-preview">
-            <div class="form-account-info" action="" method="post" enctype="multipart/form-data">
+            <div class="form-account-info">
                 <table class="account-info-input">
                     <tr>
-                        <td><label>ID帳號</label></td>
+                        <td>ID帳號</td>
                         <td>
-                            <p></p>
+                            <p>originalId</p>
                         </td>
                     </tr>
                     <tr>
-                        <td><label>密碼</label></td>
+                        <td>密碼</td>
                         <td>
-                            <p></p>
+                            <p>************</p>
                         </td>
                     </tr>
                     <tr>
-                        <td><label>再次輸入密碼</label></td>
+                        <td>再次輸入密碼</td>
                         <td>
-                            <p></p>
+                            <p>************</p>
                         </td>
                     </tr>
                     <tr>
-                        <td><label>姓氏</label></td>
+                        <td>姓氏</td>
+                        <td><p>姓氏</p></td>
+                    </tr>
+                    <tr>
+                        <td>名字</td>
                         <td>
-                            <p></p>
+                            <p>名字</p>
                         </td>
                     </tr>
                     <tr>
-                        <td><label>名字</label></td>
+                        <td>出生日期</td>
                         <td>
-                            <p></p>
+                            <p>2000/01/01</p>
                         </td>
                     </tr>
                     <tr>
-                        <td><label>出生日期</label></td>
+                        <td>電子郵件信箱</td>
                         <td>
-                            <p></p>
+                            <p>電子郵件信箱</p>
                         </td>
                     </tr>
                     <tr>
-                        <td><label>電子郵件信箱</label></td>
+                        <td>手機號碼</td>
                         <td>
-                            <p></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label>手機號碼</label></td>
-                        <td>
-                            <p></p>
+                            <p>0910-000-000</p>
                         </td>
                     </tr>
                 </table>
